@startuml

title __SRC's Class Diagram__\n

  namespace  {
    interface Bun {
        {abstract} + toString()
    }
  }
  

  namespace  {
    abstract class Burger {
        {static} ~ CHEESE : String
        {static} ~ HAMBURGER : String
        {static} ~ VEGAN : String
        ~ box : String
        ~ name : String
        + toString()
        ~ box()
        {abstract} ~ collect()
        ~ getName()
        ~ setBox()
        ~ setName()
    }
  }
  

  namespace  {
    interface BurgerIngredientFactory {
        {abstract} + createBun()
        {abstract} + createCheese()
        {abstract} + createCutlet()
        {abstract} + createSauce()
    }
  }
  

  namespace  {
    class BurgerKingBun {
        + toString()
    }
  }
  

  namespace  {
    class BurgerKingCheese {
        + toString()
    }
  }
  

  namespace  {
    class BurgerKingCutlet {
        + toString()
    }
  }
  

  namespace  {
    class BurgerKingIngredientFactory {
        + createBun()
        + createCheese()
        + createCutlet()
        + createSauce()
    }
  }
  

  namespace  {
    class BurgerKingSauce {
        + toString()
    }
  }
  

  namespace  {
    class BurgerKingStore {
        # createBurger()
    }
  }
  

  namespace  {
    abstract class BurgerStore {
        {abstract} # createBurger()
        ~ orderBurger()
    }
  }
  

  namespace  {
    interface Cheese {
        {abstract} + toString()
    }
  }
  

  namespace  {
    class Cheeseburger {
        ~ Cheeseburger()
        ~ collect()
    }
  }
  

  namespace  {
    interface Cutlet {
        {abstract} + toString()
    }
  }
  

  namespace  {
    class Hamburger {
        ~ Hamburger()
        ~ collect()
    }
  }
  

  namespace  {
    class McDonBun {
        + toString()
    }
  }
  

  namespace  {
    class McDonCheese {
        + toString()
    }
  }
  

  namespace  {
    class McDonCutlet {
        + toString()
    }
  }
  

  namespace  {
    class McDonIngredientFactory {
        + createBun()
        + createCheese()
        + createCutlet()
        + createSauce()
    }
  }
  

  namespace  {
    class McDonSauce {
        + toString()
    }
  }
  

  namespace  {
    class McDonStore {
        # createBurger()
    }
  }
  

  namespace  {
    interface Sauce {
        {abstract} + toString()
    }
  }
  

  namespace  {
    class TestDrive {
        {static} + main()
    }
  }
  

  namespace  {
    class VeganBurger {
        ~ VeganBurger()
        ~ collect()
    }
  }
  

  Burger o-- Bun : bun
  Burger o-- Cheese : cheese
  Burger o-- Cutlet : cutlet
  Burger o-- Sauce : sauce
  BurgerKingBun .up.|> Bun
  BurgerKingCheese .up.|> Cheese
  BurgerKingCutlet .up.|> Cutlet
  BurgerKingIngredientFactory .up.|> BurgerIngredientFactory
  BurgerKingSauce .up.|> Sauce
  BurgerKingStore -up-|> BurgerStore
  Cheeseburger -up-|> Burger
  Cheeseburger o-- BurgerIngredientFactory : ingredientFactory
  Hamburger -up-|> Burger
  Hamburger o-- BurgerIngredientFactory : ingredientFactory
  McDonBun .up.|> Bun
  McDonCheese .up.|> Cheese
  McDonCutlet .up.|> Cutlet
  McDonIngredientFactory .up.|> BurgerIngredientFactory
  McDonSauce .up.|> Sauce
  McDonStore -up-|> BurgerStore
  VeganBurger -up-|> Burger
  VeganBurger o-- BurgerIngredientFactory : ingredientFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
